@startuml hallo
package game{
    abstract class Entity
    {
        + render()
    } 
    class Globals
    class Manager{
        + addObstacle()
        + addPlayer()
        + addScene()
        + startGameLoop()
        + stopGameLoop()

        - handleKey()
        - performCalculation()
        - performRender()
    }
    class Obstacle{
        + setNextId()
    }
    class ObstacleManager
    {
        + assignObstacle(Obstacle)
        + prepareObstacle()
        + shiftObstacle()
        + render()
        + HandleCollisionAndGetGravity()
    }
    abstract PhysikalEntity{
        + move(vektor)
        + checkCollision(PhysikalEntity)
    }
    class Player{
        + performGameCycle()
    }
    class Scene

    Entity --|> PhysikalEntity
    Entity --|> Scene
    PhysikalEntity --|> Player
    PhysikalEntity --|> Obstacle

    Obstacle --* ObstacleManager

    Manager *-- ObstacleManager
    Manager *-- Player
    Manager *-- Scene   
}


@enduml